bot window z-index issue resolved

--- a/client/src/public/stylesheets/bot/_bot.scss
+++ b/client/src/public/stylesheets/bot/_bot.scss
@@ -5,11 +5,14 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  z-index: 1003;
+  // z-index: 1003;
   font-family: $bot-font;
   -webkit-font-smoothing: antialiased;
 }
 
+.bot-z-index {
+  z-index: 1003;
+}
 // .bot-is-open {
 //   z-index: 1003;
 // }
